// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelView Component should display an alternate graph on query-string update: alternate graph 1`] = `
<PageLayout>
  <PageHeader
    t={[Function]}
    viewId="RHEL"
  >
    t(curiosity-view.RHELTitle, Subscription Watch)
  </PageHeader>
  <PageToolbar>
    <Connect(Toolbar)
      query={
        Object {
          "granularity": "daily",
        }
      }
      viewId="RHEL"
    />
  </PageToolbar>
  <PageSection>
    <Connect(C3GraphCard)
      cardTitle="t(curiosity-graph.socketsHeading)"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "physicalSockets",
            "stroke": "#06c",
          },
          Object {
            "color": "#009596",
            "fill": "#a2d9d9",
            "id": "hypervisorSockets",
            "stroke": "#009596",
          },
          Object {
            "color": "#5752d1",
            "fill": "#b2b0ea",
            "id": "cloudSockets",
            "stroke": "#5752d1",
          },
          Object {
            "id": "thresholdSockets",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="RHEL"
      query={
        Object {
          "granularity": "daily",
        }
      }
      viewId="RHEL"
    />
  </PageSection>
</PageLayout>
`;

exports[`RhelView Component should have a fallback title: title 1`] = `
<PageLayout>
  <PageHeader
    t={[Function]}
    viewId="RHEL"
  >
    t(curiosity-view.RHELTitle, Subscription Watch)
  </PageHeader>
  <PageToolbar>
    <Connect(Toolbar)
      query={
        Object {
          "granularity": "daily",
        }
      }
      viewId="RHEL"
    />
  </PageToolbar>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.socketsHeading)"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "physicalSockets",
            "stroke": "#06c",
          },
          Object {
            "color": "#009596",
            "fill": "#a2d9d9",
            "id": "hypervisorSockets",
            "stroke": "#009596",
          },
          Object {
            "color": "#5752d1",
            "fill": "#b2b0ea",
            "id": "cloudSockets",
            "stroke": "#5752d1",
          },
          Object {
            "id": "thresholdSockets",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="RHEL"
      query={
        Object {
          "granularity": "daily",
        }
      }
      viewId="RHEL"
    />
  </PageSection>
</PageLayout>
`;

exports[`RhelView Component should render a non-connected component: non-connected 1`] = `
<PageLayout>
  <PageHeader
    t={[Function]}
    viewId="RHEL"
  >
    t(curiosity-view.RHELTitle, Subscription Watch)
  </PageHeader>
  <PageToolbar>
    <Connect(Toolbar)
      query={
        Object {
          "granularity": "daily",
        }
      }
      viewId="RHEL"
    />
  </PageToolbar>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.socketsHeading)"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "physicalSockets",
            "stroke": "#06c",
          },
          Object {
            "color": "#009596",
            "fill": "#a2d9d9",
            "id": "hypervisorSockets",
            "stroke": "#009596",
          },
          Object {
            "color": "#5752d1",
            "fill": "#b2b0ea",
            "id": "cloudSockets",
            "stroke": "#5752d1",
          },
          Object {
            "id": "thresholdSockets",
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="RHEL"
      query={
        Object {
          "granularity": "daily",
        }
      }
      viewId="RHEL"
    />
  </PageSection>
</PageLayout>
`;
